# fraud_detection

./: .gitignore  Dockerfile  README.md  ci.yml  main.py  model.py  pyproject.toml  test_main.py  train.py
.github/workflows/: ci.yml
outputs/: classification_report.txt
test/: test_main.py
